# poc-bug-aya-log

./: Cargo.toml  README.md
poc-bug-aya-log/: Cargo.toml
poc-bug-aya-log-common/: Cargo.toml
poc-bug-aya-log-ebpf/: Cargo.toml
poc-bug-aya-log-ebpf/src/: main.rs
poc-bug-aya-log/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
