[package]
name = "poc-bug-aya-log-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
poc-bug-aya-log-common = { path = "../poc-bug-aya-log-common" }

[[bin]]
name = "poc-bug-aya-log"
path = "src/main.rs"

[profile.dev]
opt-level = 3
# if debug = false there is no bug
debug = 2
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
# if debug = false there is no bug
debug = 2
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
